# hindsight

./: .gitignore  README.md  WRITEUP.md  pyproject.toml  requirements.txt
notebooks/: RESULTS.md  ablation.csv  agent_vs_baselines.csv
src/: config.py
src/agents/: base.py  debate.py  indicators.py  llm_cache.py  momentum_analyst.py  researchers.py  technical_analyst.py
src/backtest/: agent_backtest.py  baselines.py  costs.py  minimal_agent.py  random_agent.py  run_ablation.py  run_agent_comparison.py  run_alpha_decay.py  run_baselines.py  run_null_test.py  run_regime_controlled.py  run_significance.py
src/evaluation/: metrics.py  significance.py
tests/: test_metrics.py  test_no_lookahead.py  test_significance.py
